--- a/style.css
+++ b/style.css
@@ -12,44 +12,38 @@ body{
 	justify-content: center;
 	height: 100vh;
 }
-.container{
-    max-width: 320px;
-	box-shadow: 5px 5px 5px rgb(0 0 0 / 10%);
-    background-color: white;
-    border-radius: 20px;
-    overflow: hidden;
-    padding: 16px;	
-	margin-bottom: 16px;
-	
+
+div{
+	max-width: 288px;
+	margin:10px;
+	padding:16px 16px 40px 16px;
+	background-color: white;
+	box-shadow: 0px 25px 25px rgba(0, 0, 0, 0.0476518);
+	border-radius: 20px;
 }
-img{
-    width: 100%;
-    border-radius: 10px;
+div img{
+	width: 100%;
+	border-radius: 10px;
 }
+
 h1{
 	font-size: 22px;
 	color: #1F314F;
 	line-height: 28px;
 	font-weight: 700;
 	height: 56px;
-	padding: 24px 16px 16px 16px;
 	text-align: center;
+	max-width: 288px;
+	padding-top: 24px;
 }
 p{
+	padding-top: 16px;
 	width: 256px;
 	font-weight: 400;
 	font-size: 15px;
 	line-height: 19px;
 	letter-spacing: 0.1875px;
-	padding: 0px 32px 24px 32px;
 	text-align: center;
 	color: #7D889E;
-}
-
-.comment {
-	font-size: 11px;
-	text-align: center;
-}
-.comment a {
-	color: hsl(228, 45%, 44%);
+	margin: 0 auto;
 }
